--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -11,7 +11,9 @@ on:
 
 jobs:
   build:
-
+    defaults:
+      run:
+        working-directory: ./my-app/
     runs-on: ubuntu-latest
 
     strategy:
@@ -26,7 +28,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-        cache-dependency-path: '././my-app/package-lock.json'
+        cache-dependency-path: './package-lock.json'
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
