--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -6,17 +6,7 @@ on:
 
 jobs:
   eslint:
-    name: eslint
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
-    - name: install node v12
-      uses: actions/setup-node@v1
-      with:
-        node-version: 18
-    - name: yarn install
-      run: yarn install
-    - name: eslint
-      uses: icrawl/action-eslint@v1
-      with:
-        custom-glob: crop-planning
+      - uses: actions/checkout@v1
+      - uses: stefanoeb/eslint-action@1.0.2
