--- a/crop-planning/.eslintrc.json
+++ b/crop-planning/.eslintrc.json
@@ -10,7 +10,7 @@
     "overrides": [
     ],
     "parserOptions": {
-        "ecmaVersion": "latest",
+        "ecmaVersion": "13",
         "sourceType": "module"
     },
     "plugins": [
