--- a/crop-planning/package.json
+++ b/crop-planning/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/user-event": "^13.5.0",
+    "express": "^4.18.2",
     "firebase": "^9.14.0",
     "formik": "^2.2.9",
     "fsevents": "^2.3.2",
