--- a/crop-planning/package.json
+++ b/crop-planning/package.json
@@ -14,6 +14,7 @@
     "react-firebase-hooks": "^5.1.1",
     "react-grid-layout": "^1.3.4",
     "react-icons": "^4.7.1",
+    "react-router": "^6.4.4",
     "react-router-dom": "^6.4.3",
     "react-scripts": "^5.0.1",
     "styled-components": "^5.3.6",
